finish reference line test

--- a/src/hqplanner/CMakeLists.txt
+++ b/src/hqplanner/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   message_generation
   cmake_modules
+  visualization_msgs
 )
 find_package(Eigen REQUIRED) 
 ## System dependencies are found with CMake's conventions
@@ -115,7 +116,7 @@ generate_messages(
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES hqplanner
-  CATKIN_DEPENDS roscpp std_msgs geometry_msgs message_runtime 
+  CATKIN_DEPENDS roscpp std_msgs geometry_msgs message_runtime visualization_msgs
   DEPENDS system_lib
 )
 
